#add_subdirectory(avatars)

#if(WITH_DESKTOPTHEME)
#    add_subdirectory(desktoptheme)
#endif()

#if(WITH_LAYOUT_TEMPLATES)
    #add_subdirectory(layout-templates)
#endif()

#if(WITH_LOOK_AND_FEEL)
    #add_subdirectory(look-and-feel)
#endif()

#if(WITH_MENULAUNCHER)
#    add_subdirectory(plasmoids)
#endif()
